Change header title from CTGDPS to DTGDPS

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <header :class="{ dark: store.dark }">
             <div class="logo">
                 <img src="/images/icon.png" width="50" height="50">
-                <h2 style="line-height:4rem;">CTGDPS</h2>
+                <h2 style="line-height:4rem;">DTGDPS</h2>
                 <p style="line-height:4rem;">v1.0.0</p>
             </div>
             <nav class="nav">
@@ -61,7 +61,7 @@
                         class="nav__cta type-label-lg"
                         href="https://forms.gle/MecxM26YLrSMobai9"
                         target="_blank"
-                        >Kirim Rekor</a
+                        >Send Record</a
                     >
                 </div>
             </nav>
