--- a/extended-page/rules.html
+++ b/extended-page/rules.html
@@ -13,7 +13,7 @@
     <h1>The Demonlist Rules</h1>
     <p>The guidelines that the Demon List follows while managing new level placements and incoming record submissions are described in this section of the page. Please take note that while these guidelines go into great detail on the several aspects of the list and the Team, they are not necessarily exhaustive and may be updated anytime the Team deems the need to. The changelog should be carefully studied by players, so they are aware of any most current additions or changes before these updates are implemented.</p>
     <p>Please feel free to ask any Team member for clarification if you have any questions or issues regarding these rules.</p>
-    <p>Join the official UGDPS <a class="link" href="https://discord.gg/cY8jBwKZkM">Discord Server</a> and head to <b>#🗃︲list-support</b> if you request help with your records or anything else.</p>
+    <p>Join the official UGDPS <a class="link" href="https://discord.gg/ZFF5Rgfb5B">Discord Server</a> and head to <b>#list-support</b> if you request help with your records or anything else.</p>
     <br>
     <!-- ================================== -->
     <h2>Records</h2>
@@ -47,7 +47,6 @@
     <li>It is not allowed to use the Smooth Fix to severely slow down the game. Additionally, it is prohibited to use texture packs that visibly change hitboxes other than the player's own.</li>
     <br>
     <br>
-       <p class="low-opacity">Thank you to <a class="link" href="https://www.youtube.com/@tTAL9988">TAL9988</a> for letting us use his Demon List Template and Rules sheet.</p>
     <p class="low-opacity">All credit for the inspiration for these rules goes to the <a class="link" href="https://pointercrate.com/guidelines/index">Pointercrate</a> Guidelines.</p>
 </body>
 </html>
