--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=1024" />
-        <title>Demon List</title>
+        <title>DT Demon List</title>
         <link rel="icon" href="/images/icon.png" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -31,7 +31,7 @@
         <header :class="{ dark: store.dark }">
             <div class="logo">
                 <img src="/images/icon.png" width="50" height="50">
-                <h2 style="line-height:4rem;">DTGDPS</h2>
+                <h2 style="line-height:4rem;">DTGDDL</h2>
                 <p style="line-height:4rem;">v1.0.0</p>
             </div>
             <nav class="nav">
