--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
         <script src="https://unpkg.com/vue@3.2.31/dist/vue.global.js"></script>
         <script src="https://unpkg.com/vue-router@4.0.14/dist/vue-router.global.prod.js"></script>
         <script type="module" src="/js/main.js"></script>
+         <script type="module">
+            import { changeList } from "./js/content.js";
+
+            export function onChangeList(){
+                changeList();
+            }
+
+            window.onChangeList = onChangeList;
+        </script>
     </head>
     <body id="app">
         <header :class="{ dark: store.dark }">
@@ -63,6 +72,10 @@
                         target="_blank"
                         >Send Record</a
                     >
+                     <select onchange="onChangeList()" class="nav__switch" id="list_dropdown">
+                        <option value="dl">Demonlist</option>
+                        <option value="ill">ILL</option>
+                    </select>
                 </div>
             </nav>
         </header>
