--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         target="_blank"
                         >Send Record</a
                     >
-                     <select onchange="onChangeList()" class="nav__switch" id="list_dropdown">
+                     <select onchange="onChangeList()" class="nav__switch type-label-lg" id="list_dropdown">
                         <option value="dl">Demonlist</option>
                         <option value="ill">ILL</option>
                     </select>
