--- a/index.html
+++ b/index.html
@@ -66,17 +66,16 @@
                             alt=""
                         />
                     </button>
+                     <select onchange="onChangeList()" class="nav__switch btngl" id="list_dropdown">
+                        <option value="dl">Demonlist</option>
+                        <option value="ill">ILL</option>
+                    </select>
                     <a
                         class="nav__cta type-label-lg"
                         href="https://forms.gle/MecxM26YLrSMobai9"
                         target="_blank"
                         >Send Record</a
                     >
-                    
-                     <select onchange="onChangeList()" class="nav__switch type-label-lg" id="list_dropdown">
-                        <option value="dl">Demonlist</option>
-                        <option value="ill">ILL</option>
-                    </select>
                 </div>
             </nav>
         </header>
