--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     </button>
                      <select onchange="onChangeList()" class="nav__switch btngl" id="list_dropdown">
                         <option value="dl">Demonlist</option>
-                        <option value="ill">ILL</option>
+                        <option value="cl">Challenge List</option>
                     </select>
                 </div>
             </nav>
