--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             alt=""
                         />
                     </button>
-                     <select onchange="onChangeList()" class="nav__tab" id="list_dropdown">
+                     <select onchange="onChangeList()" class="btn-no-cover" id="list_dropdown">
                         <option value="dl">Demonlist</option>
                         <option value="cl">Challenge List</option>
                     </select>
