--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <header :class="{ dark: store.dark }">
             <div class="logo">
                 <img src="/images/icon.png" width="50" height="50">
-                <h2><select onchange="onChangeList()" class="btn-no-cover" id="list_dropdown">
+                <h2 style="line-height:7rem;"><select onchange="onChangeList()" class="btn-no-cover" id="list_dropdown">
                         <option value="dl">DTGDDL</option>
                         <option value="cl">DTGDCL</option>
                 </select></h2>
